--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,18 @@ port: 8080
 
 spring:
 datasource:
+# ?????
 driver-class-name: com.mysql.cj.jdbc.Driver
-url: jdbc:mysql://localhost:3306/ccsa_db?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
-username: root
-password: 123456
+# ????? (????IP?????)
+url: jdbc:mysql://localhost:3306/ccsa_db?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&useSSL=false
+# ????
+username:root
+password:123456 
 
 mybatis-plus:
 configuration:
+# ???????? (user_name -> userName)
 map-underscore-to-camel-case: true
-log-impl: org.apache.ibatis.logging.stdout.StdOutImpl # ?????SQL??
+# ?? SQL ??
+log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+mapper-locations: classpath*:/mapper/**/*.xml # ??????XML?SQL?????
