--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # MyBatis-Plus ??
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 mybatis-plus.mapper-locations=classpath*:/mapper/**/*.xml
+spring.redis.host=192.168.206.251
+spring.redis.port=6379
+# ?????
+# spring.redis.password=
